[gd_scene load_steps=15 format=3 uid="uid://dv7vk3ew136ws"]

[ext_resource type="Script" path="res://Scripts/character_window.gd" id="1_nm0ds"]
[ext_resource type="Texture2D" uid="uid://djfun3oemvimr" path="res://Assets/sprites/UI/General UI/Background.png" id="2_v25jn"]
[ext_resource type="Texture2D" uid="uid://ch7xocwcacsdw" path="res://Assets/sprites/UI/xbutton3.png" id="3_khte5"]
[ext_resource type="Texture2D" uid="uid://7xrl5207jq6f" path="res://Assets/sprites/UI/General UI/DummyBG2.png" id="5_pigpk"]
[ext_resource type="Texture2D" uid="uid://1h7eno7gyr6i" path="res://Assets/sprites/UI/General UI/LightBackground2.png" id="7_y6fls"]
[ext_resource type="Theme" uid="uid://c58omhf8eve5i" path="res://UI_Theme.tres" id="8_5qh2x"]
[ext_resource type="Texture2D" uid="uid://dprqf1l8psiuh" path="res://Assets/sprites/Atlases/Characters/Player/PlayerSouth.tres" id="8_vxotp"]
[ext_resource type="Material" uid="uid://delm7ytskxl55" path="res://Assets/shaders/Pink_to_transparent.tres" id="9_c3cet"]
[ext_resource type="Script" path="res://Scripts/armor_slot.gd" id="9_dlavu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8v2wp"]
texture = ExtResource("2_v25jn")
texture_margin_left = 256.0
texture_margin_top = 256.0
texture_margin_right = 256.0
texture_margin_bottom = 256.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(1, 0.8, 0.301961, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ok5o0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2ri7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2klv4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfb0b"]

[node name="CharacterWindow" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
offset_top = -648.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.715, 0.715)
script = ExtResource("1_nm0ds")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -674.0
offset_right = 3078.0
offset_bottom = 3075.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.188)
pivot_offset = Vector2(7.5, 0)
theme_override_styles/panel = SubResource("StyleBoxTexture_8v2wp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 475
theme_override_constants/margin_top = 625
theme_override_constants/margin_right = 475
theme_override_constants/margin_bottom = 275

[node name="Exit Window" type="Button" parent="."]
modulate = Color(1, 0.8, 0.301961, 1)
layout_mode = 2
offset_left = -47.5524
offset_top = -650.35
offset_right = 2008.45
offset_bottom = 1405.65
scale = Vector2(0.013, 0.013)
mouse_filter = 1
theme_override_colors/icon_pressed_color = Color(0.881937, 0.881937, 0.881937, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ok5o0")
icon = ExtResource("3_khte5")
flat = true
icon_alignment = 2
vertical_icon_alignment = 0

[node name="Title Plate" type="Button" parent="."]
layout_mode = 0
offset_left = -373.427
offset_top = -695.105
offset_right = 1376.57
offset_bottom = -183.105
scale = Vector2(0.115, 0.115)
theme_override_styles/hover = SubResource("StyleBoxEmpty_d2ri7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2klv4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yfb0b")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(1, 0.8, 0.301961, 1)
layout_mode = 0
offset_left = -373.427
offset_top = -695.105
offset_right = 1376.57
offset_bottom = -183.105
scale = Vector2(0.115, 0.115)
texture = ExtResource("2_v25jn")
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256

[node name="Title Text" type="Label" parent="."]
layout_mode = 0
offset_left = -380.42
offset_top = -686.713
offset_right = -169.42
offset_bottom = -651.713
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerDummyBackground" type="NinePatchRect" parent="."]
modulate = Color(1, 0.8, 0.301961, 1)
layout_mode = 0
offset_left = -366.434
offset_top = -524.476
offset_right = 1262.57
offset_bottom = 1912.52
scale = Vector2(0.115, 0.115)
texture = ExtResource("5_pigpk")
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256

[node name="PlayerDummy" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -338.986
offset_top = -500.692
offset_right = 3291.01
offset_bottom = 3079.31
scale = Vector2(0.029, 0.067)
mouse_filter = 2
texture = ExtResource("8_vxotp")
expand_mode = 1

[node name="Legs" type="TextureRect" parent="."]
material = ExtResource("9_c3cet")
layout_mode = 2
offset_left = -338.986
offset_top = -500.692
offset_right = 3291.01
offset_bottom = 3079.31
scale = Vector2(0.029, 0.067)
mouse_filter = 2
expand_mode = 1

[node name="Chest" type="TextureRect" parent="."]
material = ExtResource("9_c3cet")
layout_mode = 2
offset_left = -338.986
offset_top = -500.692
offset_right = 3291.01
offset_bottom = 3079.31
scale = Vector2(0.029, 0.067)
mouse_filter = 2
expand_mode = 1

[node name="Head" type="TextureRect" parent="."]
material = ExtResource("9_c3cet")
layout_mode = 2
offset_left = -338.986
offset_top = -500.692
offset_right = 3291.01
offset_bottom = 3079.31
scale = Vector2(0.029, 0.067)
mouse_filter = 2
expand_mode = 1

[node name="Arms" type="TextureRect" parent="."]
material = ExtResource("9_c3cet")
layout_mode = 2
offset_left = -338.986
offset_top = -500.692
offset_right = 3291.01
offset_bottom = 3079.31
scale = Vector2(0.029, 0.067)
mouse_filter = 2
expand_mode = 1

[node name="Weapon" type="TextureRect" parent="."]
material = ExtResource("9_c3cet")
layout_mode = 2
offset_left = -370.222
offset_top = -437.187
offset_right = -236.222
offset_bottom = -302.187
mouse_filter = 2

[node name="Shield" type="TextureRect" parent="."]
material = ExtResource("9_c3cet")
layout_mode = 2
offset_left = -327.626
offset_top = -500.692
offset_right = 3302.37
offset_bottom = 3079.32
scale = Vector2(0.029, 0.067)
mouse_filter = 2
expand_mode = 1

[node name="ArmorSlots" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Helmet" type="TextureRect" parent="ArmorSlots"]
layout_mode = 2
offset_left = -310.489
offset_top = -605.594
offset_right = 3319.51
offset_bottom = 2974.41
scale = Vector2(0.02, 0.02)
mouse_filter = 0
texture = ExtResource("7_y6fls")
stretch_mode = 4
script = ExtResource("9_dlavu")

[node name="item_sprite" type="TextureRect" parent="ArmorSlots/Helmet"]
layout_mode = 1
anchors_preset = -1
offset_left = -1866.43
offset_top = 10.155
offset_right = -1610.43
offset_bottom = 138.155
scale = Vector2(28, 28)

[node name="Chest" type="TextureRect" parent="ArmorSlots"]
layout_mode = 2
offset_left = -475.0
offset_top = -500.0
offset_right = 3155.0
offset_bottom = 3080.0
scale = Vector2(0.02, 0.02)
mouse_filter = 0
texture = ExtResource("7_y6fls")
stretch_mode = 4
script = ExtResource("9_dlavu")
Item_Type = 1

[node name="item_sprite" type="TextureRect" parent="ArmorSlots/Chest"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.988
anchor_bottom = 0.974
offset_left = -1866.43
offset_top = -85.315
offset_right = -5196.87
offset_bottom = -3444.23
scale = Vector2(28, 28)

[node name="Arms" type="TextureRect" parent="ArmorSlots"]
layout_mode = 2
offset_left = -149.65
offset_top = -500.699
offset_right = 3480.35
offset_bottom = 3079.3
scale = Vector2(0.02, 0.02)
mouse_filter = 0
texture = ExtResource("7_y6fls")
stretch_mode = 4
script = ExtResource("9_dlavu")
Item_Type = 3

[node name="item_sprite" type="TextureRect" parent="ArmorSlots/Arms"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.988
anchor_bottom = 1.0
offset_left = -1716.76
offset_top = -15.385
offset_right = -5047.2
offset_bottom = -3467.38
scale = Vector2(28, 28)

[node name="Shield" type="TextureRect" parent="ArmorSlots"]
layout_mode = 2
offset_left = -150.0
offset_top = -350.0
offset_right = 3480.0
offset_bottom = 3230.0
scale = Vector2(0.02, 0.02)
mouse_filter = 0
texture = ExtResource("7_y6fls")
stretch_mode = 4
script = ExtResource("9_dlavu")
Item_Type = 5

[node name="item_sprite" type="TextureRect" parent="ArmorSlots/Shield"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.988
anchor_bottom = 0.974
offset_left = -1869.23
offset_top = -51.4
offset_right = -5199.67
offset_bottom = -3410.32
scale = Vector2(28, 28)

[node name="Weapon" type="TextureRect" parent="ArmorSlots"]
layout_mode = 2
offset_left = -475.0
offset_top = -350.0
offset_right = 3155.0
offset_bottom = 3230.0
scale = Vector2(0.02, 0.02)
mouse_filter = 0
texture = ExtResource("7_y6fls")
stretch_mode = 4
script = ExtResource("9_dlavu")
Item_Type = 4

[node name="item_sprite" type="TextureRect" parent="ArmorSlots/Weapon"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1866.43
offset_top = -51.4
offset_right = -5240.43
offset_bottom = -3503.4
scale = Vector2(28, 28)

[node name="Legs" type="TextureRect" parent="ArmorSlots"]
layout_mode = 2
offset_left = -310.0
offset_top = -215.0
offset_right = 3320.0
offset_bottom = 3365.0
scale = Vector2(0.02, 0.02)
mouse_filter = 0
texture = ExtResource("7_y6fls")
stretch_mode = 4
script = ExtResource("9_dlavu")
Item_Type = 2

[node name="item_sprite" type="TextureRect" parent="ArmorSlots/Legs"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.988
anchor_bottom = 1.0
offset_left = -1892.66
offset_top = 11.888
offset_right = -5223.1
offset_bottom = -3440.11
scale = Vector2(28, 28)

[node name="Helm Text" type="Label" parent="."]
layout_mode = 0
offset_left = -298.0
offset_top = -628.0
offset_right = -254.0
offset_bottom = -600.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Helm"

[node name="Chest Text" type="Label" parent="."]
layout_mode = 0
offset_left = -465.0
offset_top = -525.0
offset_right = -419.0
offset_bottom = -497.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Chest
"

[node name="Gauntlets Text" type="Label" parent="."]
layout_mode = 0
offset_left = -155.0
offset_top = -525.0
offset_right = -74.0
offset_bottom = -497.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Gauntlets"

[node name="Weapon text" type="Label" parent="."]
layout_mode = 0
offset_left = -475.0
offset_top = -375.0
offset_right = -406.0
offset_bottom = -347.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Weapon
"

[node name="Shield Text" type="Label" parent="."]
layout_mode = 0
offset_left = -142.0
offset_top = -375.0
offset_right = -88.0
offset_bottom = -347.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Shield
"

[node name="Legs Text" type="Label" parent="."]
layout_mode = 0
offset_left = -297.0
offset_top = -239.0
offset_right = -253.0
offset_bottom = -211.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Legs
"

[node name="Name Value" type="Label" parent="."]
layout_mode = 0
offset_left = -485.0
offset_top = -619.0
offset_right = -394.0
offset_bottom = -591.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Dude Guy"

[node name="Level Tag" type="Label" parent="."]
layout_mode = 0
offset_left = -140.0
offset_top = -619.0
offset_right = -49.0
offset_bottom = -591.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Level: "

[node name="Level Value" type="Label" parent="."]
layout_mode = 0
offset_left = -79.72
offset_top = -622.0
offset_right = 11.28
offset_bottom = -594.0
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "69
"

[node name="Exp Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -509.024
offset_top = -25.232
offset_right = -418.024
offset_bottom = 2.768
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Experience:"
horizontal_alignment = 2

[node name="Exp Value" type="Label" parent="."]
layout_mode = 0
offset_left = -400.264
offset_top = -26.822
offset_right = -293.264
offset_bottom = 32.178
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "9564/10000"

[node name="Health Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -535.664
offset_top = -142.657
offset_right = -444.664
offset_bottom = -114.657
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Health:"
horizontal_alignment = 2

[node name="Health Value" type="Label" parent="."]
layout_mode = 0
offset_left = -423.664
offset_top = -142.657
offset_right = -332.664
offset_bottom = -83.6574
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "9001"

[node name="Armor Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -535.664
offset_top = -100.657
offset_right = -444.664
offset_bottom = -72.6573
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Armor:
"
horizontal_alignment = 2

[node name="Armor Value" type="Label" parent="."]
layout_mode = 0
offset_left = -423.664
offset_top = -100.657
offset_right = -332.664
offset_bottom = -41.6573
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "420
"

[node name="Weight Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -535.664
offset_top = -58.6573
offset_right = -444.664
offset_bottom = -30.6573
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Weight:
"
horizontal_alignment = 2

[node name="Weight Value" type="Label" parent="."]
layout_mode = 0
offset_left = -423.664
offset_top = -58.6573
offset_right = -332.664
offset_bottom = 0.342655
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "185
"

[node name="Strength Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -197.664
offset_top = -142.657
offset_right = -106.664
offset_bottom = -114.657
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Strength:
"
horizontal_alignment = 2

[node name="Strength Value" type="Label" parent="."]
layout_mode = 0
offset_left = -92.6643
offset_top = -142.657
offset_right = -1.66434
offset_bottom = -83.6574
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "42"

[node name="Dexterity Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -197.664
offset_top = -99.6573
offset_right = -106.664
offset_bottom = -71.6573
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Dexterity:
"
horizontal_alignment = 2

[node name="Dexterity Value" type="Label" parent="."]
layout_mode = 0
offset_left = -92.6643
offset_top = -100.657
offset_right = -1.66434
offset_bottom = -41.6573
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "666"

[node name="Inteligence Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -197.664
offset_top = -58.6573
offset_right = -100.664
offset_bottom = -30.6573
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Inteligence: "
horizontal_alignment = 2

[node name="Inteligence Value" type="Label" parent="."]
layout_mode = 0
offset_left = -92.6643
offset_top = -58.6573
offset_right = -1.66434
offset_bottom = 0.342655
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "276
"

[node name="Constitution Tag" type="Label" parent="."]
self_modulate = Color(0.924573, 0.919377, 7.70092e-07, 1)
layout_mode = 0
offset_left = -209.664
offset_top = -23.957
offset_right = -105.664
offset_bottom = 4.043
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_color = Color(0.647059, 0.478431, 0.133333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Constitution:"
horizontal_alignment = 2

[node name="Constitution Value" type="Label" parent="."]
layout_mode = 0
offset_left = -90.384
offset_top = -25.177
offset_right = 0.615959
offset_bottom = 33.823
scale = Vector2(1.02439, 0.707317)
theme = ExtResource("8_5qh2x")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "101"

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="button_down" from="Exit Window" to="." method="_on_exit_window_button_down"]
[connection signal="button_up" from="Exit Window" to="." method="_on_exit_window_button_up"]
[connection signal="mouse_entered" from="Exit Window" to="." method="_on_exit_window_mouse_entered"]
[connection signal="mouse_exited" from="Exit Window" to="." method="_on_exit_window_mouse_exited"]
[connection signal="pressed" from="Exit Window" to="." method="_on_exit_window_pressed"]
[connection signal="button_down" from="Title Plate" to="." method="_on_top_plate_button_button_down"]
[connection signal="button_down" from="Title Plate" to="." method="_on_title_plate_button_down"]
[connection signal="button_up" from="Title Plate" to="." method="_on_title_plate_button_up"]
[connection signal="mouse_entered" from="Title Plate" to="." method="_on_title_plate_mouse_entered"]
[connection signal="mouse_exited" from="Title Plate" to="." method="_on_title_plate_mouse_exited"]
[connection signal="mouse_entered" from="ArmorSlots/Helmet" to="ArmorSlots/Helmet" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ArmorSlots/Helmet" to="ArmorSlots/Helmet" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ArmorSlots/Chest" to="ArmorSlots/Chest" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ArmorSlots/Chest" to="ArmorSlots/Chest" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ArmorSlots/Arms" to="ArmorSlots/Arms" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ArmorSlots/Arms" to="ArmorSlots/Arms" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ArmorSlots/Shield" to="ArmorSlots/Shield" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ArmorSlots/Shield" to="ArmorSlots/Shield" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ArmorSlots/Weapon" to="ArmorSlots/Weapon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ArmorSlots/Weapon" to="ArmorSlots/Weapon" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ArmorSlots/Legs" to="ArmorSlots/Legs" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ArmorSlots/Legs" to="ArmorSlots/Legs" method="_on_mouse_exited"]
